--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,20 @@
 body {
-    color: white;
-    background: black;
+    color: rgb(247, 6, 6);
+    background: rgb(0, 0, 0);
     margin: 0px;
     font-family: "Chakra Petch", sans-serif;
     margin-bottom: 100px;
 }
 
 header {
-    border-bottom: solid 2px rgb(42, 122, 228);
+    border-bottom: solid 2px rgb(255, 6, 6);
     padding: 20px;
     font-size: 32px;
-    color: rgb(42, 122, 228);
+    color: rgb(252, 0, 0);
 }
 
 .chamada {
-    background: rgb(184, 156, 213);
+    background: rgb(0, 0, 0);
     padding-bottom: 80px;
     padding-top: 80px;
     display: flex;
@@ -52,9 +52,9 @@ p {
 
 .categoria-videos img:hover {
     opacity: 1.0;
-    border: 3px solid green;
+    border: 3px solid rgb(248, 9, 9);
 }
 
 .categoria h2 {
-    color: rgb(42, 122, 228);
+    color: rgb(0, 6, 14);
 }
